Exp UI et Réglage UI dans le PlayerUnitBase et ajout du plugin modelisation

--- a/TBRPG.uproject
+++ b/TBRPG.uproject
@@ -32,6 +32,18 @@
 				"Mac",
 				"Linux"
 			]
+		},
+		{
+			"Name": "HoudiniEngine",
+			"Enabled": true
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorModeling",
+			"Enabled": true
 		}
 	]
 }
