--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,4 +101,9 @@ ManualIPAddress=
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
+r.Lumen.TraceMeshSDFs=0
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.Lumen.HardwareRayTracing=True
+r.Lumen.HardwareRayTracing.LightingMode=0
 
