--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/DemoMap.DemoMap
+GameDefaultMap=/Game/Maps/CanyonMap.CanyonMap
 GlobalDefaultGameMode=/Game/Blueprints/TBRPG_GameMode.TBRPG_GameMode_C
-EditorStartupMap=/Game/Maps/DemoMap.DemoMap
+EditorStartupMap=/Game/Maps/CanyonMap.CanyonMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
