vfx rain + rvt and bp path added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,4 +107,5 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.Lumen.HardwareRayTracing=True
 r.Lumen.HardwareRayTracing.LightingMode=0
+r.VirtualTextures=True
 
